--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,6 +5,7 @@
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    flex-direction: row;
 }
 
 .login-page .container {
@@ -14,6 +15,7 @@
 
 .login-page .container h2 {
     margin-bottom: 0.5em;
+    font-size: 22px;
 }
 
 .login-page .container form {
