--- a/public/css/signup-style.css
+++ b/public/css/signup-style.css
@@ -5,7 +5,7 @@ body {
     background-repeat: no-repeat;
     max-height: 100vh;
     margin: 0;
-    font-family: 'Times New Roman', serif;
+    font-family: "Lato", sans-serif;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
