--- a/views/partials/nav_bar.ejs
+++ b/views/partials/nav_bar.ejs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg main-nav font-weight-bold border-bottom pb-3" id="navbar">
   <div class="container">
     <a class="navbar-brand" href="/">
-      <img src="images/logo.png" alt="Gathergrid Logo" class="img-fluid">
+      <img src="/images/logo.png" alt="Gathergrid Logo" class="img-fluid">
     </a>
 
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
