Views/Edit/Delete/Fixes
- Create a view template to display the events with respective values
- Create a delete and edit model inside the view to perform respective actions
- Display the events on the database in the home page
- Fixed some issues related with alerts and redirections.

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,7 +4,7 @@
 
 <main class="container my-5">
     <div class=" row justify-content-md-center my-4">
-        <img src="images/error.png" alt="Error" class="image-fluid" style="max-width: 100%; height: auto; width: 300px">
+        <img src="/images/error.png" alt="Error" class="image-fluid" style="max-width: 100%; height: auto; width: 300px">
     </div>
     <div class=" row justify-content-md-center my-2">
         <h1>Error: <%= statusCode %></h1>
