--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -28,107 +28,25 @@
 	      	</div>
     	</div>	
 
-
-
-
-
 		<div class="row shuffle-wrapper portfolio-gallery">
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item"  data-groups="[&quot;comedy&quot;]">     <!-- Change the data group (concerts parties socials food) -->
-		      	<div class="position-relative inner-box">
-		          <div class="image position-relative ">
-	               <img src="images/events/1.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-	                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event1">
-	                      <h5 class="mb-0">Mike Rita</h5>
-	                      <p>December 8</p>
-	                    </a>
-	                  </div>
-	                </div> 
-	            </div>
-		      </div>
-	      </div>
-
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;concerts&quot;]"> 
-	        <div class="position-relative inner-box" >
-	            <div class="image position-relative ">
-	               <img src="images/events/2.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-		                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event2">
-		                      <h5 class="mb-0">Taylor Swift</h5>
-		                      <p>December 9</p>
-		                    </a>
-	                	</div> 
-		            </div>
-		        </div>
-		      </div>
-	      </div>
-
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;food&quot;,&quot;socials&quot;]">
-	        <div class="position-relative inner-box">
-	            <div class="image position-relative ">
-	               <img src="images/events/3.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-	                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event3">
-	                      <h5 class="mb-0">Food Fest</h5>
-	                      <p>December 10</p>
-	                    </a>
-	                  </div>
-	                </div> 
-	            </div>
-	        </div>
-	      </div>
-
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;parties&quot;]">
-	        <div class="position-relative inner-box">
-	            <div class="image position-relative ">
-	               <img src="images/events/4.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-	                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event4">
-	                      <h5 class="mb-0">K-POP in your area</h5>
-	                      <p>December 11</p>
-	                    </a>
-	                  </div>
-	                </div> 
-	            </div>
-	        </div>
-	      </div>
-
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;socials&quot;]">
-	        <div class="position-relative inner-box">
-	            <div class="image position-relative ">
-	               <img src="images/events/5.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-	                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event5">
-	                       <h5 class="mb-0 ">COMICCON</h5>
-	                      	<p>December 12</p>
-	                    </a>
-	                  </div>
-	                </div> 
-	            </div>
-	        </div>
-	      </div>
-
-	      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;socials&quot;,&quot;comedy&quot;]">
-	        <div class="position-relative inner-box">
-	            <div class="image position-relative ">
-	               <img src="images/events/6.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-	                <div class="overlay-box">
-	                  <div class="overlay-inner">
-	                    <a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/event6">
-	                       <h5 class="mb-0">Jokoy</h5>
-	                      	<p>December 13</p>
-	                    </a>
-	                  </div>
-	                </div> 
-	            </div>
-	        </div>
-	      </div>
+			<% data.forEach(item => { %>
+				<div class="col-lg-4 col-6 mb-4 shuffle-item"  data-groups="[&quot;<%= item.category %>&quot;]">   
+					<div class="position-relative inner-box">
+						<div class="image position-relative ">
+								<img src="images/events/1.jpg" alt="Event Image" class="img-fluid w-100 d-block">
+							<div class="overlay-box">
+								<div class="overlay-inner">
+									<a class="overlay-content" style="color: black" onmouseover="this.style.color='rgb(255, 77, 0)'" onmouseout="this.style.color='black'" href="/events/view/<%= item._id %>">
+										<h5 class="mb-0"><%= item.name %></h5>
+										<p><%= new Date(item.date).toLocaleDateString('en-US', {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'}) %></p>
+									</a>
+								</div>
+							</div> 
+						</div>
+					</div>
+				</div>
+			<% }); %>
 	    </div>
 	</div>
 </section>
-<!-- Portfolio End -->
+
