Profile Edit/Delete
- Create delete and edit option for profile

--- a/views/eventCreate.ejs
+++ b/views/eventCreate.ejs
@@ -20,7 +20,7 @@
 
                         <div class="form-group">
                             <label for="price">Price (per ticket):</label>
-                            <input type="text" id="price" name="price" placeholder="Make everyone enjoy it" required />
+                            <input type="number" id="price" name="price" placeholder="Make everyone enjoy it" required />
                             <div class="error" id="price-error"></div>
                         </div>
 
